<resources>
    <string name="app_name">城外旅游</string>
    <string name="homeName">云南</string>
    <string name="home_topic_chosen">精选</string>
    <string name="home_topic_travels">经典游记</string>
    <string name="home_topic_hot_spots">热门景点</string>
    <string name="text_down">已加入(%1$d) ∨</string>
    <string name="prop_select_number">已选择：%1$d件物品</string>
    <string name="down">∨</string>
    <string name="up">∧</string>
    <string name="at_your_in_group">%s在群聊中@了你</string>
    <string name="text_limit_200">%1$d/200</string>
    <string name="sure_number">确定(%1$d)</string>
    <string name="text_up">已加入(%1$d) ∧</string>
    <string name="text_uping">加入中(%1$d) ∧</string>
    <string name="text_downing">加入中(%1$d) ∨</string>
    <string name="home_activity_button_appoint">樾</string>
    <string name="home_activity_button_circle">荃</string>
    <string name="home_activity_button_find">阀</string>
    <string name="home_activity_button_me">涡</string>
    <string name="home_activity_button_main">绶</string>
    <string name="activity_circle_back_font_icon">泛</string>
    <string name="activity_circle_love">昝</string>
    <string name="activity_circle_discuss">倫</string>
    <string name="activity_circle_love_empty">昊</string>
    <string name="activity_title_management_title">颢</string>
    <string name="activity_circle_love_full">昝</string>
    <string name="activity_other_private_message">辛</string>
    <string name="activity_other_follow">罐</string>
    <string name="activity_other_followed">咦</string>
    <string name="activity_other_title">膘</string>
    <string name="activity_other_new_user">坼</string>
    <string name="activity_message_center_recommend">煎</string>
    <string name="activity_message_center_aite">铨</string>
    <string name="activity_message_center_more">铎</string>
    <string name="activity_other_detail_message">暨</string>
    <string name="activity_other_album_eye">晏</string>
    <string name="activity_my_album_add">罐</string>
    <string name="fragment_circle_search">璟</string>
    <string name="fragment_find_add">桁</string>
    <string name="activity_travels_plan_time">食</string>
    <string name="activity_travels_plan_data">轴</string>
    <string name="fragment_find_hotel">玖</string>
    <string name="fragment_find_travels">紊</string>
    <string name="fragment_find_food">赤</string>
    <string name="fragment_find_active">嚯</string>
    <string name="item_fragment_find_add">芷</string>
    <string name="activity_appoint_detail_share">享</string>
    <string name="activity_appoint_detail_collection">仓</string>
    <string name="activity_appoint_detail_complaint">诉</string>
    <string name="fragment_play_with_me_time">誓</string>
    <string name="fragment_play_with_me_air">籍</string>
    <string name="fragment_play_with_me_people">頭</string>
    <string name="activity_personnel_equipment_people">仞</string>
    <string name="activity_setting_camera">昭</string>
    <string name="fragment_home_chosen">菁</string>
    <string name="fragment_home_spot">娣</string>
    <string name="activity_active_item_air">萱</string>
    <string name="activity_register_nick_name">涌</string>
    <string name="fragment_play_with_me_add">桁</string>
    <string name="activity_custom_destination_user">者</string>
    <string name="activity_message_center_cursor">暇</string>
    <string name="activity_activate_detail_pen">銘</string>
    <string name="activity_cursor_left">佐</string>
    <string name="activity_cursor_down">峡</string>
    <string name="activity_add_detail_line">炉</string>
    <string name="activity_personnel_equipment_equ">俱</string>
    <string name="activity_des_remark_title">q</string>
    <string name="activity_des_remark_des">榕</string>
    <string name="activity_delicious_detail_wan">炽</string>
    <string name="activity_create_post_aite">忑</string>
    <string name="activity_create_post_smell">筱</string>
    <string name="activity_create_post_picture">骈</string>
    <string name="activity_add_detail_team_profile">揭</string>
    <string name="activity_add_detail_spot">靖</string>
    <string name="activity_add_detail_spot_add">炜</string>
    <string name="activity_aite_ok">垢</string>
    <string name="activity_orders_detail_pay">傅</string>
    <string name="activity_my_appoint_delete">邋</string>
    <string name="activity_my_publication_team">対</string>
    <string name="activity_my_publication_other">沓</string>
    <string name="activity_my_publication_post">貼</string>
    <string name="activity_member_detail_age">撵</string>
    <string name="activity_member_detail_girl">钕</string>
    <string name="activity_member_detail_boy">囡</string>
    <string name="activity_member_detail_delete">叉</string>
    <string name="activity_customer_center_tel">殿</string>
    <string name="activity_confirm_orders_zfb">芝</string>
    <string name="activity_confirm_orders_we_chat">微</string>
    <string name="activity_identity_phone">皓</string>
    <string name="activity_identity_id_card">绅</string>
    <string name="activity_identity_run_card">驾</string>
    <string name="activity_identity_car_card">筝</string>
    <string name="activity_message_center_setting">置</string>
    <string name="activity_travels_plan_car">車</string>
    <string name="activity_album_add">添</string>
    <string name="activity_select_cursor">佑</string>
    <string name="activity_setting_log_out">莞</string>
    <string name="cat_more">查看全部 ∨ </string>
    <string name="close_more">收起全部 ∧ </string>
    <string name="post">帖子：</string>
    <string name="follow">关注：</string>
    <string name="follow_word">关注\u3000</string>
    <string name="activity_circle_detail_follow">＋ 关注</string>
    <string name="activity_circle_detail_followed">√ 已关注</string>
    <string name="ver_is_error">验证码不正确</string>
    <string name="enter_right_11_number">请输入11位手机号</string>
    <string name="enterr_right_number_with_11">请输入正确的11位手机号</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="password_not_consistent">密码不一致</string>
    <string name="ver_is_empty">请输入验证码</string>
    <string name="please_enter_nick_name">请输入昵称(最多8位)</string>
    <string name="please_select_your_sex">请选择性别</string>
    <string name="not_send_ver">尚未请求验证码</string>
    <string name="save_change">保存修改</string>
    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>
    <string name="activity_travels_plan_remark">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;备注</string>
    <string name="pop_order">·\u3000智能排序</string>
    <string name="pop_star">·\u3000按星级</string>
    <string name="pop_mouth">·\u3000按口碑</string>
    <string name="pop_now">·\u3000最新发布</string>
    <string name="pop_price_up">·\u3000价格升序</string>
    <string name="pop_price_down">·\u3000价格降序</string>
    <string name="pop_out_number">·\u3000出行人数</string>
    <string name="pop_day_number">·\u3000行程天数</string>
    <string name="kongge">\u3000\u3000</string>
    <string name="permission_title_rationale">需要相关权限</string>
    <string name="label_ok">确定</string>
    <string name="label_cancel">取消</string>
    <string name="permission_read_storage_rationale">需要读取SD卡权限</string>
    <string name="label_select_picture">选择图片</string>
    <string name="toast_cannot_retrieve_selected_image">未接受到图片</string>
    <string name="toast_unexpected_error">未知错误</string>
    <string name="permission_write_storage_rationale">写入sd卡权限</string>
    <string name="total_album">共有%1$d个相册</string>
    <string name="Recording_without_permission">没有麦克风权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短了</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Send_voice_need_sdcard_support">未检查到SD卡，发送语音需要SD卡</string>
    <string name="move_up_to_cancel">向上移动取消发送</string>
    <string name="recoding_fail">录音失败</string>
    <string name="release_to_cancel">松开取消</string>
    <string name="id_auth_des">·请保证您上传的证件照清晰度可辨\n·每当您提供给我们敏感信息时，我们将采取安全措施保护您的敏感信息及已储存的个人资料，以防止您的个人资料丢失，被盗用或遭篡改\n·除非根据法律或政府的强制性规定，在为得到您的书面许可之前，我们不会把您的个人资料提供给无关的第三方（包括公司和个人）。但是，如果您要求我们提供特定客户支援服务时，我们则需要把您的相关信息提供给有关的第三方，如保险公司等</string>
    <string name="prop_des">平台的认证高级用户选择道具才有效，其他用户请跳过此步，具体请咨询客服。</string>
    <string-array name="together_appoint">
            <item>约伴订单</item>
            <item>已报名待通过</item>
            <item>已通过待支付</item>
            <item>报名成功待出发</item>
            <item>报名失败被拒绝</item>
            <item>报名失败支付超时</item>
            <item>约伴未完成退款中</item>
            <item>约伴完成准备出发</item>
            <item>出游中</item>
            <item>约伴结束待评价</item>
            <item>已评价</item>
            <item>已退款</item>
            <item>取消报名</item>
            <item>申请退款</item>
            <item>取消支付</item>
        </string-array>
    <string-array name="with_me_appoint">
        <item>招募中</item>
        <item>招募中</item>
        <item>招募成功</item>
        <item>招募失败</item>
    </string-array>
    <string name="cost_des" formatted="false">·行程结束后，【城外旅游】结算予发布人佣金\n·到达出发时间仍未达到最低人数将全额退款\n·游玩结束后，城外旅游将收取总费用5%的服务佣金\n·用户在行程开始前3日申请取消，可全额退款\n·用户在行程开始前2日申请取消，将扣除订单费用的30%作为手续费用\n·用户在行程开始前1日申请取消，将不能申请退款\n·于活动中自愿终止参与活动，将不予退款款项\n·如因天灾等不可抗拒因素，【城外旅游】将主动通知延期或退款</string>
    <string name="preview_see">预览</string>
    <string name="send">发送</string>
    <string name="about_des">如果你讨厌上车睡觉、下车拍照，被导游牵着鼻子走的跟团游；或是厌倦了查攻略到吐血、事事自己操心、没人管没人问的自助游；\n[城外旅游]将开启您旅行的新方式！</string>
    <string name="public_number">公众号</string>
    <string name="official_micro_blog">官方微博</string>
    <string name="aite_cityoff">\@城外旅游</string>
    <string name="service_tel">客服电话</string>
    <string name="service_tel_number">0871–65126820</string>
    <string name="cityoff_protocol">城外旅游软件许可及服务协议</string>
    <string name="cityoff_company">云南城外旅游文化发展有限公司</string>
    <string name="cityoff_english_des">Yunnan Chengwai Travelling Culture Development Co., Ltd.</string>
    <string name="enter_time">报名时间</string>
    <string name="enter_people_sum">参与人数</string>
    <string name="enter">报名</string>
    <string name="spots_name">景点名称</string>
    <string name="spots_des">景点简介</string>
    <string name="optional">*选填</string>
    <string name="spots_address">景点地址</string>
    <string name="option_address">选择地址▼</string>
    <string name="spots_photo">景点照片</string>
    <string name="search">搜索</string>
    <string name="appoint_key">约伴口令:</string>
    <string name="travel_way">交通方式:</string>
    <string name="remark">\u3000\u3000备注:</string>
    <string name="people_plan">人员计划:</string>
    <string name="trip_plan">行程安排</string>
    <string name="thumbnail">缩略图</string>
    <string name="props_provide">道具提供</string>
    <string name="cost_detail">费用详情</string>
    <string name="matters_needing_attention">注意事项</string>
    <string name="connect_creator">联系发布人</string>
    <string name="dream_place">理想地</string>
    <string name="get_order">接单</string>
    <string name="you_current_pay_money_is">您的支付金额为：</string>
    <string name="current_back_money_may_is">当前可退款金额为：</string>
    <string name="back_money_des">退款说明</string>
    <string name="order_pay">订单支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="well_pay_money">待付资金</string>
    <string name="pay_now">立即支付</string>
    <string name="bind_phone">绑定手机</string>
    <string name="id_card">身份证</string>
    <string name="driver_card">驾驶证</string>
    <string name="run_card">车辆认证/行驶证</string>
    <string name="auth_des">认证说明</string>
    <string name="user">用户</string>
    <string name="destination">目的地</string>
    <string name="circle">圈子</string>
    <string name="content">内容</string>
</resources>