<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/pop_window_order_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="@dimen/x5"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:button="@null"
            android:id="@+id/rb_now"
            android:textColor="@drawable/pop_order_text_selector"
            android:text="@string/pop_now"
            android:gravity="center"
            android:background="@drawable/pop_order_selector"
            android:textSize="@dimen/x14sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/x30" />

        <RadioButton
            android:id="@+id/rb_up"
            android:button="@null"
            android:textColor="@drawable/pop_order_text_selector"
            android:text="@string/pop_price_up"
            android:gravity="center"
            android:background="@drawable/pop_order_selector"
            android:textSize="@dimen/x14sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/x30" />

        <RadioButton
            android:button="@null"
            android:textColor="@drawable/pop_order_text_selector"
            android:text="@string/pop_price_down"
            android:gravity="center"
            android:background="@drawable/pop_order_selector"
            android:textSize="@dimen/x14sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/x30"
            android:id="@+id/rb_down" />


    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/x5"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:button="@null"
            android:textColor="@drawable/pop_order_text_selector"
            android:text="@string/pop_out_number"
            android:gravity="center"
            android:background="@drawable/pop_order_selector"
            android:textSize="@dimen/x14sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/x30"
            android:id="@+id/rb_out" />

        <RadioButton
            android:button="@null"
            android:textColor="@drawable/pop_order_text_selector"
            android:text="@string/pop_day_number"
            android:gravity="center"
            android:background="@drawable/pop_order_selector"
            android:textSize="@dimen/x14sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/x30"
            android:id="@+id/rb_day" />

        <View
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="@dimen/x1"/>

    </LinearLayout>



</LinearLayout>
