<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="0dp"
            style="@style/fragmentAppointWithMeLl">
            <com.example.administrator.travel.ui.view.FontsIconTextView
                android:text="@string/fragment_play_with_me_air"
                style="@style/fragmentAppointWithMeIconFont"/>
            <TextView
                android:text="理想地：丽江"
                style="@style/fragmentAppointWithMeText"/>

        </LinearLayout>
        <LinearLayout

            style="@style/fragmentAppointWithMeLl">
            <com.example.administrator.travel.ui.view.FontsIconTextView
                android:textColor="@color/otherTitleBg"
                android:text="@string/fragment_play_with_me_time"
                style="@style/fragmentAppointWithMeIconFont"/>
            <TextView
                android:textSize="11sp"
                android:textColor="@color/otherTitleBg"
                android:text="行程日期：2017-6-1至2018-5-1"
                style="@style/fragmentAppointWithMeText"/>

        </LinearLayout>
        <LinearLayout

            style="@style/fragmentAppointWithMeLl">
            <com.example.administrator.travel.ui.view.FontsIconTextView
                android:paddingLeft="0dp"
                android:textSize="18sp"
                android:text="@string/fragment_play_with_me_add"
                style="@style/fragmentAppointWithMeIconFont"/>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/color646464"
                android:text="昆明出发 四天四夜"
                style="@style/fragmentAppointWithMeText"/>

        </LinearLayout>
        <LinearLayout

            style="@style/fragmentAppointWithMeLl">
            <com.example.administrator.travel.ui.view.FontsIconTextView
                android:textStyle="italic"
                android:textSize="16sp"
                android:text="@string/fragment_play_with_me_people"
                style="@style/fragmentAppointWithMeIconFont"/>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/color646464"
                android:text="已有：2人"
                style="@style/fragmentAppointWithMeText"/>

        </LinearLayout>


    </LinearLayout>


